feat: email sender
