# docs/swagger.json
@@ -13,6 +13,40 @@
         "version": "7.0"
     },
     "paths": {
+        "/api/v7/auth/register": {
+            "post": {
+                "description": "This endpoint registers new users into our application.",
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Register a new user",
+                "parameters": [
+                    {
+                        "description": "User object",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.RegisterResponseSchema"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v7/general/reviews": {
             "get": {
                 "description": "This endpoint retrieves a few reviews of the application.",
@@ -71,6 +105,12 @@
                         "schema": {
                             "$ref": "#/definitions/schemas.SubscriberResponseSchema"
                         }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
                     }
                 }
             }
@@ -84,7 +124,8 @@
                     "$ref": "#/definitions/models.ShortUserData"
                 },
                 "text": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "This is a nice review"
                 }
             }
         },
@@ -92,10 +133,12 @@
             "type": "object",
             "properties": {
                 "avatar": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "https://my-avatar.com"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "John Doe"
                 }
             }
         },
@@ -103,28 +146,35 @@
             "type": "object",
             "properties": {
                 "address": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "234, Lagos, Nigeria"
                 },
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "johndoe@email.com"
                 },
                 "fb": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "https://facebook.com"
                 },
                 "ig": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "https://instagram.com"
                 },
                 "name": {
                     "type": "string"
                 },
                 "phone": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "+2348133831036"
                 },
                 "tw": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "https://twitter.com"
                 },
                 "wh": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "https://wa.me/2348133831036"
                 }
             }
         },
@@ -136,7 +186,65 @@
             "properties": {
                 "email": {
                     "type": "string",
-                    "minLength": 5
+                    "minLength": 5,
+                    "example": "johndoe@email.com"
+                }
+            }
+        },
+        "models.User": {
+            "type": "object",
+            "required": [
+                "email",
+                "first_name",
+                "last_name",
+                "password",
+                "terms_agreement"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "minLength": 5,
+                    "example": "johndoe@email.com"
+                },
+                "first_name": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "example": "John"
+                },
+                "last_name": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "example": "Doe"
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 8,
+                    "example": "strongpassword"
+                },
+                "terms_agreement": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "schemas.EmailRequestSchema": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                }
+            }
+        },
+        "schemas.RegisterResponseSchema": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/schemas.EmailRequestSchema"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
                 }
             }
         },
@@ -176,6 +284,23 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/models.Subscriber"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "utils.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
                 },
                 "message": {
                     "type": "string"
